--- a/WolvenKit/Views/ProjectExplorerView.xaml
+++ b/WolvenKit/Views/ProjectExplorerView.xaml
@@ -52,7 +52,7 @@
 
                     <MenuItem Header="Export">
                         <MenuItem Header="Export with WCC" Command="{Binding ExportMeshCommand}"/>
-                        <MenuItem Header="Export to Json" Command="{Binding ExportJsonCommand}"/>
+                        <MenuItem Header="Export to JSON" Command="{Binding ExportJsonCommand}"/>
                     </MenuItem>
 
                     <Separator/>
@@ -62,12 +62,12 @@
                     <MenuItem Header="Delete" Command="{Binding DeleteFileCommand}"/>
                     <MenuItem Header="Rename" Command="{Binding RenameFileCommand}"/>
                     <Separator/>
-                    <MenuItem Header="Copy Relative Path" Command="{Binding CopyRelPathCommand}"/>
+                    <MenuItem Header="Copy relative path" Command="{Binding CopyRelPathCommand}"/>
                     <MenuItem Header="Open in File Explorer" Command="{Binding OpenInFileExplorerCommand}"/>
-                    <MenuItem Header="Open in Asset Browser Explorer" Command="{Binding OpenInAssetBrowserCommand}"/>
+                    <MenuItem Header="Open in asset browser" Command="{Binding OpenInAssetBrowserCommand}"/>
                     <Separator/>
-                    <MenuItem Header="Expand Children" Command="{Binding ExpandCommand}"/>
-                    <MenuItem Header="Collapse Children" Command="{Binding CollapseCommand}"/>
+                    <MenuItem Header="Expand children" Command="{Binding ExpandCommand}"/>
+                    <MenuItem Header="Collapse children" Command="{Binding CollapseCommand}"/>
                     <Separator/>
                     
                 </ContextMenu>
