--- a/WolvenKit/MVVM/Views/Components/Tools/AnimsView.xaml
+++ b/WolvenKit/MVVM/Views/Components/Tools/AnimsView.xaml
@@ -1,9 +1,7 @@
-<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Tools.AnimationTool.MimicsView"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Tools.AnimsView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com"
-                   IsVisibleChanged="UserControl_IsVisibleChanged"
-                   xmlns:hc="https://handyorg.github.io/handycontrol">
+                   xmlns:catel="http://schemas.catelproject.com" IsVisibleChanged="UserControl_IsVisibleChanged" xmlns:hc="https://handyorg.github.io/handycontrol">
     <catel:UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -15,10 +13,10 @@
 
 
     <Grid>
-
+        
         <StackPanel VerticalAlignment="Center">
             <StackPanel Margin="0,15,0,0"  Orientation="Horizontal">
-                <hc:ComboBox  VerticalAlignment="Top" IsEditable="True" Width="450" hc:InfoElement.TitleWidth="140" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="w3fac"  Text="None"/>
+                <hc:ComboBox  VerticalAlignment="Top" IsEditable="True" Width="450" hc:InfoElement.TitleWidth="140" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="w2rig"  Text="None"/>
                 <Button Width="50" Margin="5,0,0,0" Content="Browse"/>
 
             </StackPanel>
@@ -27,7 +25,7 @@
                 <Button Width="50" Margin="5,0,0,0" Content="Browse"/>
 
             </StackPanel>
-            <hc:ComboBox  IsEditable="True" Width="auto" hc:InfoElement.TitleWidth="140" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Select Pose" Margin="0,15,0,15" Text=""/>
+            <hc:ComboBox  IsEditable="True" Width="auto" hc:InfoElement.TitleWidth="140" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Select Animation" Margin="0,15,0,15" Text=""/>
             <Grid VerticalAlignment="Bottom" Margin="0,0,0,0"  >
                 <Button HorizontalAlignment="Right" Width="150" Content="Export"/>
                 <Button HorizontalAlignment="Left" Width="150" Content="Cancel"/>
@@ -35,7 +33,7 @@
 
             </Grid>
         </StackPanel>
-
+      
 
     </Grid>
 
