--- a/WolvenKit/MVVM/Views/Components/Tools/MenuCreatorToolView.xaml
+++ b/WolvenKit/MVVM/Views/Components/Tools/MenuCreatorToolView.xaml
@@ -1,4 +1,4 @@
-<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Tools.WccTool.WccToolView"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Tools.MenuCreatorToolView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol">
@@ -14,40 +14,36 @@
 
 
     <Grid >
-
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="1*"/>
-            <RowDefinition Height="3*"/>
-
         </Grid.RowDefinitions>
-
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*"/>
-            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
+        
+            <ToolBar HorizontalAlignment="Left" VerticalAlignment="Top">
+                <Button Content="File"/>
+                <Separator/>
+                <Button Content="Edit Main"/>
+                <Separator/>
+                <Button Content="Refresh"/>
 
-        <ToolBar HorizontalAlignment="Left" VerticalAlignment="Top">
-
-            <Button Content="Run"/>
-        </ToolBar>
-
-
-        <ListView Grid.Row="1" Grid.RowSpan="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-
-
-        </ListView>
-
-        <hc:PropertyGrid Grid.Column="2" Grid.Row="2"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            </ToolBar>
 
 
+        <hc:CheckTreeView Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+
+
+        </hc:CheckTreeView>
+
+
+        <hc:PropertyGrid Grid.Column="1" Grid.Row="1">
+            
         </hc:PropertyGrid>
 
-        <TextBox Grid.Row="1" Grid.RowSpan="1" Grid.ColumnSpan="1" Grid.Column="1">
-
-        </TextBox>
 
     </Grid>
 
 </catel:UserControl>
-
