--- a/WolvenKit/MVVM/Views/Components/Tools/PluginManagerView.xaml
+++ b/WolvenKit/MVVM/Views/Components/Tools/PluginManagerView.xaml
@@ -1,4 +1,4 @@
-<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Tools.PluginManager.PluginManagerView"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Tools.PluginManagerView"
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                   xmlns:catel="http://schemas.catelproject.com"  
