--- a/WolvenKit/MVVM/Views/Components/Tools/RadishToolView.xaml
+++ b/WolvenKit/MVVM/Views/Components/Tools/RadishToolView.xaml
@@ -1,4 +1,4 @@
-<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Tools.ImporterTool.ImporterToolView"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Tools.RadishToolView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol">
@@ -17,22 +17,34 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+
         </Grid.RowDefinitions>
-        
-            <ToolBar HorizontalAlignment="Left" VerticalAlignment="Top">
-                <Button Content="Import"/>
-                <Separator/>
-                <Button Content="Auto-Fill Texturegroups"/>
-                <ComboBox Text="" Width="150"></ComboBox>
 
-            </ToolBar>
-    
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="2*"/>
+        </Grid.ColumnDefinitions>
 
-        <ListView Grid.Row="1"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <ToolBar HorizontalAlignment="Left" VerticalAlignment="Top">
 
 
+        </ToolBar>
+
+
+        <hc:PropertyGrid Grid.Row="1" Grid.RowSpan="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+
+
+        </hc:PropertyGrid>
+
+        <hc:PropertyGrid Grid.Column="2" Grid.Row="2"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+
+
+        </hc:PropertyGrid>
+
+        <ListView Grid.Row="1" Grid.RowSpan="1" Grid.ColumnSpan="1" Grid.Column="1">
+            
         </ListView>
-
 
     </Grid>
 
