--- a/WolvenKit/MVVM/Views/Components/Tools/WccToolView.xaml
+++ b/WolvenKit/MVVM/Views/Components/Tools/WccToolView.xaml
@@ -1,4 +1,4 @@
-<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Tools.MenuTool.MenuCreatorToolView"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Tools.WccToolView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol">
@@ -14,36 +14,40 @@
 
 
     <Grid >
+
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="1*"/>
+            <RowDefinition Height="3*"/>
+
         </Grid.RowDefinitions>
+
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*"/>
-            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
-        
-            <ToolBar HorizontalAlignment="Left" VerticalAlignment="Top">
-                <Button Content="File"/>
-                <Separator/>
-                <Button Content="Edit Main"/>
-                <Separator/>
-                <Button Content="Refresh"/>
 
-            </ToolBar>
+        <ToolBar HorizontalAlignment="Left" VerticalAlignment="Top">
+
+            <Button Content="Run"/>
+        </ToolBar>
 
 
-        <hc:CheckTreeView Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <ListView Grid.Row="1" Grid.RowSpan="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
 
 
-        </hc:CheckTreeView>
+        </ListView>
+
+        <hc:PropertyGrid Grid.Column="2" Grid.Row="2"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
 
 
-        <hc:PropertyGrid Grid.Column="1" Grid.Row="1">
-            
         </hc:PropertyGrid>
 
+        <TextBox Grid.Row="1" Grid.RowSpan="1" Grid.ColumnSpan="1" Grid.Column="1">
+
+        </TextBox>
 
     </Grid>
 
 </catel:UserControl>
+
