--- a/WolvenKit/MVVM/Views/Components/Dialogs/RenameDialog.xaml
+++ b/WolvenKit/MVVM/Views/Components/Dialogs/RenameDialog.xaml
@@ -1,4 +1,4 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.Dialogs.RenameDialog"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Dialogs.RenameDialog"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol">
