--- a/WolvenKit/MVVM/Views/Components/Dialogs/StringsGUIImporterIDDialog.xaml
+++ b/WolvenKit/MVVM/Views/Components/Dialogs/StringsGUIImporterIDDialog.xaml
@@ -1,4 +1,4 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.Dialogs.StringsGUIImporterIDDialog"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Dialogs.StringsGUIImporterIDDialog"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com"
