--- a/WolvenKit/MVVM/Views/Shell/Editor/ProjectExplorerView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/Editor/ProjectExplorerView.xaml
@@ -1,19 +1,18 @@
-<catel:UserControl x:Class="WolvenKit.MVVM.Views.Shell.Editor.ProjectExplorerView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WolvenKit.Views"
-             xmlns:catel="http://schemas.catelproject.com"
-             xmlns:viewModels="clr-namespace:WolvenKit.ViewModels"
-             xmlns:model="clr-namespace:WolvenKit.Model"
-             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
-             xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
-                                      xmlns:hc="https://handyorg.github.io/handycontrol"
-
-             xmlns:behavior="clr-namespace:WolvenKit.Functionality.Behavior" xmlns:i1="http://schemas.microsoft.com/xaml/behaviors"
-                   mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" IsVisibleChanged="UserControl_IsVisibleChanged">
+<catel:UserControl
+    x:Class="WolvenKit.MVVM.Views.Shell.Editor.ProjectExplorerView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+    xmlns:catel="http://schemas.catelproject.com"
+    xmlns:model="clr-namespace:WolvenKit.Model" 
+    xmlns:hc="https://handyorg.github.io/handycontrol"
+    xmlns:behavior="clr-namespace:WolvenKit.Functionality.Behavior"
+    xmlns:i1="http://schemas.microsoft.com/xaml/behaviors"
+    mc:Ignorable="d" 
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    IsVisibleChanged="UserControl_IsVisibleChanged">
 
     <catel:UserControl.Resources>
         <ResourceDictionary>
