--- a/WolvenKit/MVVM/Views/Shell/Editor/DocumentView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/Editor/DocumentView.xaml
@@ -1,28 +1,27 @@
 <catel:UserControl
- x:Class="WolvenKit.MVVM.Views.Shell.Editor.DocumentView"
- xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
- xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
- xmlns:behavior="clr-namespace:WolvenKit.Functionality.Behavior"
- xmlns:catel="http://schemas.catelproject.com"
- xmlns:cmodel="clr-namespace:WolvenKit.MVVM.ViewModels.Shell.Editor"
- xmlns:conv="clr-namespace:WolvenKit.Functionality.Layout.Converters"
- xmlns:cr2W="clr-namespace:WolvenKit.CR2W;assembly=WolvenKit.CR2W"
- xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
- xmlns:ei="http://schemas.microsoft.com/xaml/behaviors"
- xmlns:hc="https://handyorg.github.io/handycontrol"
- xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
- xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
- xmlns:propertyGridEditors="clr-namespace:WolvenKit.MVVM.Views.PropertyGridEditors"
- xmlns:types="clr-namespace:WolvenKit.Common.Model.Cr2w;assembly=WolvenKit.Common"
- d:DesignHeight="450"
- d:DesignWidth="800"
- IsVisibleChanged="UserControl_IsVisibleChanged"
- mc:Ignorable="d"
- >
+    x:Class="WolvenKit.MVVM.Views.Shell.Editor.DocumentView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+    xmlns:behavior="clr-namespace:WolvenKit.Functionality.Behavior"
+    xmlns:catel="http://schemas.catelproject.com"
+    xmlns:ei="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:cmodel="clr-namespace:WolvenKit.MVVM.ViewModels.Shell.Editor"
+    xmlns:types="clr-namespace:WolvenKit.Common.Model.Cr2w;assembly=WolvenKit.Common"
+    xmlns:cr2W="clr-namespace:WolvenKit.CR2W;assembly=WolvenKit.CR2W"
+    xmlns:conv="clr-namespace:WolvenKit.Functionality.Layout.Converters"
+    xmlns:hc="https://handyorg.github.io/handycontrol"
+    xmlns:propertyGridEditors="clr-namespace:WolvenKit.MVVM.Views.PropertyGridEditors"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d" IsVisibleChanged="UserControl_IsVisibleChanged">
     <catel:UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <hc:ThemeResources RequestedTheme="Dark" />
+                <hc:ThemeResources  RequestedTheme="Dark" />
                 <hc:Theme />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
@@ -39,29 +38,22 @@
         </Grid.ColumnDefinitions>
 
         <Grid Grid.Column="0">
-            <hc:TabControl
-             IsAnimationEnabled="True"
-             IsTabFillEnabled="True"
-             ShowCloseButton="False"
-             Style="{DynamicResource MahApps.Styles.TabControl.AnimatedSingleRow}"
-             >
+            <hc:TabControl  Style="{DynamicResource MahApps.Styles.TabControl.AnimatedSingleRow}"  IsTabFillEnabled="True" ShowCloseButton="False" IsAnimationEnabled="True">
                 <hc:TabItem Width="75" Header="CHUNKS">
-                    <TreeView
-                     Name="TreeView"
-                     Grid.Row="0"
-                     ItemsSource="{Binding Chunks}"
-                     Style="{DynamicResource TreeView}"
-                     >
+                    <TreeView  Style="{DynamicResource TreeView}" Name="TreeView"
+                  Grid.Row="0"
+                             ItemsSource="{Binding Chunks}">
                         <ei:Interaction.Behaviors>
                             <behavior:TreeViewBehavior />
                         </ei:Interaction.Behaviors>
 
                         <TreeView.ContextMenu>
-                            <ContextMenu />
+                            <ContextMenu>
+                            </ContextMenu>
                         </TreeView.ContextMenu>
 
                         <TreeView.ItemContainerStyle>
-                            <Style BasedOn="{StaticResource TreeViewItemBaseStyle}" TargetType="{x:Type TreeViewItem}">
+                            <Style TargetType="{x:Type TreeViewItem}" BasedOn="{StaticResource TreeViewItemBaseStyle}">
                                 <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}" />
                                 <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}" />
                                 <Setter Property="KeyboardNavigation.AcceptsReturn" Value="True" />
@@ -69,17 +61,15 @@
                         </TreeView.ItemContainerStyle>
 
                         <TreeView.Resources>
-                            <HierarchicalDataTemplate DataType="{x:Type cmodel:ChunkViewModel}" ItemsSource="{Binding Children}">
+                            <HierarchicalDataTemplate DataType="{x:Type cmodel:ChunkViewModel}"
+                                          ItemsSource="{Binding Children}">
                                 <StackPanel Orientation="Horizontal">
 
                                     <TextBlock Text="{Binding Path=Name}" />
                                     <ei:Interaction.Triggers>
                                         <ei:EventTrigger EventName="PreviewMouseRightButtonDown">
-                                            <ei:ChangePropertyAction
-                                             PropertyName="IsSelected"
-                                             TargetObject="{Binding}"
-                                             Value="true"
-                                             />
+                                            <ei:ChangePropertyAction PropertyName="IsSelected" Value="true"
+                                                         TargetObject="{Binding}" />
                                         </ei:EventTrigger>
                                     </ei:Interaction.Triggers>
                                 </StackPanel>
@@ -89,7 +79,7 @@
                 </hc:TabItem>
 
                 <hc:TabItem Width="75" Header="IMPORTS">
-                    <ListView Margin="20" ItemsSource="{Binding Imports}">
+                    <ListView ItemsSource="{Binding Imports}" Margin="20">
                         <hc:Interaction.Triggers>
                             <hc:EventTrigger EventName="MouseDoubleClick">
                                 <hc:EventToCommand Command="{Binding OpenImportCommand}" PassEventArgsToCommand="True" />
@@ -98,7 +88,7 @@
 
                         <ListView.View>
                             <GridView>
-                                <GridViewColumn DisplayMemberBinding="{Binding Name}" Header="Name" />
+                                <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" />
                             </GridView>
                         </ListView.View>
                     </ListView>
@@ -114,7 +104,7 @@
 
                         <ListView.View>
                             <GridView>
-                                <GridViewColumn DisplayMemberBinding="{Binding Name}" Header="Name" />
+                                <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" />
                             </GridView>
                         </ListView.View>
                     </ListView>
@@ -130,7 +120,7 @@
 
                         <ListView.View>
                             <GridView>
-                                <GridViewColumn DisplayMemberBinding="{Binding Name}" Header="Name" />
+                                <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" />
                             </GridView>
                         </ListView.View>
                     </ListView>
@@ -138,14 +128,13 @@
             </hc:TabControl>
         </Grid>
 
-        <GridSplitter
-         Grid.Column="1"
-         Width="5"
-         HorizontalAlignment="Stretch"
-         />
+        <GridSplitter Grid.Column="1" Width="5" HorizontalAlignment="Stretch" />
 
         <Grid Grid.Column="2">
-            <hc:PropertyGrid PropertyResolver="{Binding PropertyResolver}" SelectedObject="{Binding SelectedChunk.Data}" />
+            <hc:PropertyGrid
+                PropertyResolver="{Binding PropertyResolver }"
+                SelectedObject="{Binding SelectedChunk.Data}">
+            </hc:PropertyGrid>
         </Grid>
     </Grid>
 </catel:UserControl>
