--- a/TextEditLib/Themes/Generic.xaml
+++ b/TextEditLib/Themes/Generic.xaml
@@ -1,11 +1,9 @@
-﻿<ResourceDictionary
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:local="clr-namespace:TextEditLib">
+<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
 
-	<ResourceDictionary.MergedDictionaries>
-		<ResourceDictionary Source="/TextEditLib;component/Themes/LightBrushs.xaml" />
-		<ResourceDictionary Source="/TextEditLib;component/TextEdit.xaml" />
-		<ResourceDictionary Source="/TextEditLib;component/Themes/LightIcons.xaml" />
-	</ResourceDictionary.MergedDictionaries>
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="/TextEditLib;component/Themes/LightBrushs.xaml" />
+        <ResourceDictionary Source="/TextEditLib;component/TextEdit.xaml" />
+        <ResourceDictionary Source="/TextEditLib;component/Themes/LightIcons.xaml" />
+    </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
