--- a/WolvenKit/Views/Shell/RibbonView.xaml
+++ b/WolvenKit/Views/Shell/RibbonView.xaml
@@ -39,10 +39,11 @@
             <!--  Backstage  -->
             <fluent:Ribbon.Menu>
                 <fluent:Backstage
-                 x:Name="BackstageX"
+                    Header="Home"
+                    x:Name="BackstageX"
                  Margin="70,0,0,0"
                  MouseLeftButtonDown="Backstage_MouseLeftButtonDown">
-                    <views1:BackStageView />
+                    <!--<views1:BackStageView />-->
                 </fluent:Backstage>
             </fluent:Ribbon.Menu>
 
@@ -192,7 +193,7 @@
                 </fluent:RibbonGroupBox>
             </fluent:RibbonTabItem>
 
-            <!--  Tools Dropdown Tab  -->
+            <!--  Editors Tab  -->
             <fluent:RibbonTabItem Header="Editors" Visibility="Collapsed">
                 <fluent:RibbonGroupBox Header="Quick Access">
                     <fluent:Button
@@ -273,10 +274,88 @@
                 </fluent:RibbonGroupBox>
             </fluent:RibbonTabItem>
 
-            <fluent:RibbonTabItem Header="Tools">
+            <!--  View Tab  -->
+            <fluent:RibbonTabItem Header="View">
+
+
+                <fluent:RibbonGroupBox Header="View">
+
+                    
+
+                    <fluent:Button Command="{catel:CommandManagerBinding Application.ShowLog}" Header="Project Log">
+                        <fluent:Button.LargeIcon>
+                            <iconPacks:PackIconCodicons
+                             Width="25"
+                             Height="25"
+                             HorizontalAlignment="Center"
+                             VerticalAlignment="Stretch"
+                             Kind="Notebook" />
+                        </fluent:Button.LargeIcon>
+                    </fluent:Button>
+                    <fluent:Button Command="{catel:CommandManagerBinding Application.ShowProjectExplorer}" Header="Project Explorer">
+                        <fluent:Button.LargeIcon>
+                            <iconPacks:PackIconCodicons
+                             Width="25"
+                             Height="25"
+                             HorizontalAlignment="Center"
+                             VerticalAlignment="Stretch"
+                             Kind="Note" />
+                        </fluent:Button.LargeIcon>
+                    </fluent:Button>
+                    <fluent:Button Command="{catel:CommandManagerBinding Application.ShowProperties}" Header="Properties Window">
+                        <fluent:Button.LargeIcon>
+                            <iconPacks:PackIconCodicons
+                             Width="25"
+                             Height="25"
+                             HorizontalAlignment="Center"
+                             VerticalAlignment="Stretch"
+                             Kind="SymbolProperty" />
+                        </fluent:Button.LargeIcon>
+                    </fluent:Button>
+
+                    <fluent:Button
+                     Command="{catel:CommandManagerBinding Application.ShowPluginManager}"
+                     Header="Plugin Manager"
+                     Visibility="Collapsed">
+                        <fluent:Button.LargeIcon>
+                            <iconPacks:PackIconBootstrapIcons
+                             Width="25"
+                             Height="25"
+                             HorizontalAlignment="Center"
+                             VerticalAlignment="Stretch"
+                             Kind="PlugFill" />
+                        </fluent:Button.LargeIcon>
+                    </fluent:Button>
+                </fluent:RibbonGroupBox>
+
 
                 <!--  Quick Access Tools  -->
-                <fluent:RibbonGroupBox Header="Quick Access">
+                <fluent:RibbonGroupBox Header="Tools">
+
+                    <fluent:Button Command="{catel:CommandManagerBinding Application.ShowAssetBrowser}" Header="Asset Browser">
+                        <fluent:Button.LargeIcon>
+                            <iconPacks:PackIconBootstrapIcons
+                                Width="25"
+                                Height="25"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Stretch"
+                                Kind="InboxesFill" />
+                        </fluent:Button.LargeIcon>
+                    </fluent:Button>
+
+                    <fluent:Button Command="{catel:CommandManagerBinding Application.ShowImportUtility}"
+                                   Header="Import Utility"
+                                   Visibility="Collapsed">
+                        <fluent:Button.LargeIcon>
+                            <iconPacks:PackIconCodicons
+                                Width="25"
+                                Height="25"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Stretch"
+                                Kind="Extensions" />
+                        </fluent:Button.LargeIcon>
+                    </fluent:Button>
+
                     <fluent:Button
                      Command="{catel:CommandManagerBinding Application.ShowAudioTool}"
                      Header="Audio Tool"
@@ -288,17 +367,6 @@
                              HorizontalAlignment="Center"
                              VerticalAlignment="Stretch"
                              Kind="Soundwave" />
-                        </fluent:Button.LargeIcon>
-                    </fluent:Button>
-
-                    <fluent:Button Command="{catel:CommandManagerBinding Application.ShowAssetBrowser}" Header="Asset Browser">
-                        <fluent:Button.LargeIcon>
-                            <iconPacks:PackIconBootstrapIcons
-                             Width="25"
-                             Height="25"
-                             HorizontalAlignment="Center"
-                             VerticalAlignment="Stretch"
-                             Kind="InboxesFill" />
                         </fluent:Button.LargeIcon>
                     </fluent:Button>
 
@@ -408,6 +476,7 @@
                 </fluent:RibbonGroupBox>
             </fluent:RibbonTabItem>
 
+            <!--  Options Tab  -->
             <fluent:RibbonTabItem Header="Options">
 
                 <fluent:RibbonGroupBox Header="General">
