--- a/WolvenKit/Views/Editor/Tools/ImportExportView.xaml
+++ b/WolvenKit/Views/Editor/Tools/ImportExportView.xaml
@@ -267,6 +267,22 @@
                             <syncfusion:ComboBoxItemAdv Content="Selected in Grid" />
                             <syncfusion:ComboBoxItemAdv Content="All in Grid" />
                         </syncfusion:ComboBoxAdv>
+                        <Button
+                            Margin="5,0,5,0"
+                            Padding="2,0,2,0"
+                            Click="Button_Click"
+                            FontSize="12"
+                            Style="{DynamicResource ButtonCustom}">
+                            <StackPanel Orientation="Horizontal">
+                                <iconPacks:PackIconEntypo
+                                    Width="13"
+                                    Height="13"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    Kind="help" />
+                                <TextBlock Text="Help" />
+                            </StackPanel>
+                        </Button>
                     </StackPanel>
                 </StackPanel>
             </Grid>
@@ -374,6 +390,25 @@
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center"
                 Text="Files are being processed..." />
+        </Grid>
+
+        <Grid
+            x:Name="HelpOverlay"
+            Grid.RowSpan="4"
+            Grid.ColumnSpan="4"
+            Background="{DynamicResource ContentBackgroundAlt}"
+            Visibility="Collapsed">
+            <TextBlock TextAlignment="Center">
+                1 : Select and lock file.<LineBreak />
+                2 : Select All / items in grid to copy to.<LineBreak />
+                3 : Press copy (Maybe adjust the combobox)</TextBlock>
+            <Button
+                Margin="0,150,0,0"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Click="Button_Click_1"
+                Content="Understood!"
+                Style="{DynamicResource ButtonDefault}" />
         </Grid>
 
         <!--  Overlay For File Selection  -->
