--- a/WolvenKit/Views/Editor/Tools/ImportExportView.xaml
+++ b/WolvenKit/Views/Editor/Tools/ImportExportView.xaml
@@ -342,6 +342,7 @@
                     </StackPanel>
 
                     <CheckBox
+                        x:Name="ApplyToAllCheckbox"
                         Margin="3,0,0,0"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Top"
